--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
+    "bcryptjs": "^3.0.3",
+    "chart.js": "^4.5.1",
+    "jose": "^6.1.2",
+    "lucide-react": "^0.555.0",
+    "mongoose": "^9.0.0",
     "next": "16.0.4",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
+    "prisma": "^5.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
